# rapid

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  clazy.sh  lint.sh  vcpkg-configuration.json  vcpkg.json
db/: CMakeLists.txt  DatabaseFile.hpp.in  schema.sql  track.sql
libs/common/: CMakeLists.txt  GpsPositionData.cpp  GpsPositionData.hpp  JsonDeserializer.cpp  JsonDeserializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp  LapData.cpp  SessionData.cpp  SessionData.hpp  SessionMetaData.cpp  SessionMetaData.hpp  TrackData.hpp
libs/common/qt/: CMakeLists.txt  GenericTableModel.hpp  GlobalSettingsReader.cpp  GlobalSettingsTypes.hpp  LapDataProvider.hpp  SessionMetadataProvider.hpp  TableModelDataProvider.hpp
libs/positioning/: CMakeLists.txt  ConstantGpsPositionProvider.cpp  ConstantGpsPositionProvider.hpp  ConstantVelocityPositionDateTimeProvider.cpp  ConstantVelocityPositionDateTimeProvider.hpp  IGpsPositionProvider.hpp  IPositionDateTimeProvider.hpp  StaticPositionDateTimeProvider.hpp
libs/positioning/qt/: CMakeLists.txt  CsvGpsFileReader.hpp
libs/rapid/: CMakeLists.txt  RapidConfig.cmake.in  RapidQtConfig.cmake.in
libs/rapid/algorithm/: CMakeLists.txt  DistanceCalculator.cpp  DistanceCalculator.hpp  ILaptimer.hpp  ITrackDetection.hpp  SimpleLaptimer.cpp  SimpleLaptimer.hpp  TrackDetection.cpp  TrackDetection.hpp
libs/rapid/common/: CMakeLists.txt  Date.cpp  Date.hpp  GpsPositionData.cpp  GpsPositionData.hpp  JsonDeserializer.cpp  JsonDeserializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp  LapData.cpp  LapData.hpp  PositionData.cpp  PositionData.hpp  SessionData.cpp  SessionData.hpp  SessionMetaData.cpp  SessionMetaData.hpp  SharedDataPointer.hpp  Timestamp.cpp  Timestamp.hpp  TrackData.cpp  TrackData.hpp  VelocityData.cpp  VelocityData.hpp
libs/rapid/positioning/: CMakeLists.txt  ConstantGpsPositionProvider.cpp  ConstantGpsPositionProvider.hpp  GpsdPositionInformationProvider.cpp  GpsdPositionInformationProvider.hpp  (+9 more)
libs/rest/: CMakeLists.txt  GpsEndpoint.cpp  GpsEndpoint.hpp  SessionEndpoint.cpp  SessionEndpoint.hpp
libs/storage/: CMakeLists.txt  ISessionDatabase.hpp  ITrackDatabase.hpp  SessionDatabase.cpp  SqliteSessionDatabase.cpp  SqliteSessionDatabase.hpp  SqliteTrackDatabase.cpp  SqliteTrackDatabase.hpp
libs/system/: AsyncResult.cpp  AsyncResult.hpp  CMakeLists.txt  EventLoop.cpp  EventLoop.hpp
libs/testhelper/: ActiveSessionMock.hpp  CMakeLists.txt  CompareHelper.hpp  GpsInformationProvider.hpp  GpsPositions.cpp  GpsPositions.hpp  Laptimer.cpp  Laptimer.hpp  PositionDateTimeProvider.hpp  Positions.cpp  Positions.hpp  RestClientMock.hpp  RestSessionDownloaderClient.cpp  RestSessionDownloaderClient.hpp  SessionDatabaseMock.hpp  Sessions.cpp  Sessions.hpp  SignalSpy.hpp  SqliteDatabaseTestHelper.cpp  SqliteDatabaseTestHelper.hpp  Tracks.cpp  Tracks.hpp  UbloxDevice.hpp
libs/workflow/: ActiveSessionWorkflow.cpp  ActiveSessionWorkflow.hpp  CMakeLists.txt  ISessionDownloader.hpp  RestSessionDownloader.cpp  RestSessionDownloader.hpp  TrackDetectionWorkflow.cpp  TrackDetectionWorkflow.hpp
programs/: CMakeLists.txt
programs/rapid_android/: CMakeLists.txt  rapid_android.cpp
programs/rapid_headless/: CMakeLists.txt  RapidHeadless.cpp  RapidHeadless.hpp  rapid_headless.cpp
programs/rapid_session_analyzer/: CMakeLists.txt  rapid_session_analyzer.cpp  rapid_session_analyzer.json.in
programs/rapid_session_manager/: CMakeLists.txt  rapid_session_manager.cpp  rapid_session_manager.json.in
programs/rapid_sessiondl/: CMakeLists.txt  rapid_sessiondl.cpp
programs/rapid_shell/: CMakeLists.txt  rapid_shell.cpp
programs/rapid_ssd1322/: CMakeLists.txt
programs/restgpssource/: CMakeLists.txt
tests/algorithm/: CMakeLists.txt  test_SimpleLaptimer.cpp  test_TrackDetection.cpp
tests/common/: CMakeLists.txt  RealWorld.session  TestFile.hpp.in  test_Date.cpp  test_DeviceSettingsProvider.cpp  test_GenericTableModel.cpp  test_GlobalSettingsReader.cpp  test_GpsPositionData.cpp  test_JsonDeserializer.cpp  test_JsonSerializer.cpp  test_LapData.cpp  test_LapDataProvider.cpp  test_PositionDateTime.cpp  test_SessionMetaData.cpp  test_SessionMetaDataProvider.cpp  test_SharedDataPointer.cpp  test_TableModelDataProvider.cpp  test_Timestamp.cpp  test_VelocityData.cpp  test_common_qt_main.cpp  test_qt_DeviceSettingsListModel.cpp  test_qt_GenericListModel.cpp  test_qt_LapListModel.cpp  test_qt_SessionMetaDataListModel.cpp  test_qt_SessionMetaDataSortListModel.cpp
tests/positioning/: CMakeLists.txt  test_ConstantGpsPositionProvider.cpp  test_ConstantVelocityPostionDateTimeProvider.cpp  test_UbloxGpsPositionInformationProvider.cpp
tests/rest/: CMakeLists.txt  test_GpsEndpoint.cpp  test_Path.cpp  test_RestCall.cpp  test_RestServer.cpp  test_SessionEndpoint.cpp
tests/storage/: CMakeLists.txt  SessionDatabaseServer.hpp  test_FileSystemSessionDatabaseBackend.cpp  test_SessionDatabase.cpp  test_SessionDatabaseIpcClient.cpp  test_SessionMetaDataProvider.cpp  test_SqliteSessionDatabase.cpp  test_SqliteTrackDatabase.cpp  test_session.sql  test_tracks.sql
tests/system/: CMakeLists.txt  test_AsyncResult.cpp  test_Event.cpp  test_EventLoop.cpp  test_EventLoopIntegration.cpp  test_FdNotifier.cpp  test_FutureWatcher.cpp  test_QEventDispatcher.cpp  test_Timer.cpp
tests/testhelper/: CMakeLists.txt  CompareHelper.hpp  PositionDateTimeProvider.hpp  SessionDatabaseMock.hpp  Sessions.cpp  SqliteDatabaseTestHelper.cpp  SqliteDatabaseTestHelper.hpp
tests/workflow/: CMakeLists.txt  test_ActiveSessionEndpoint.cpp  test_ActiveSessionWorkflow.cpp  test_GpsRestResource.cpp  test_GpsRestResourceReader.cpp  test_LocalSessionManagement.cpp  test_RestActiveSession.cpp  test_RestSessionDownloader.cpp  test_RestSessionManagementWorkflow.cpp  test_SessionAnalyzeWorkflow.cpp  test_TrackDetectionWorkflow.cpp  test_qt_DeviceManagement.cpp  test_qt_LocalSessionManagement.cpp  test_qt_RestActiveSession.cpp  test_qt_RestSessionDownloader.cpp  test_qt_RestSessionManagementWorkflow.cpp  test_qt_SessionAnalyzeWorkflow.cpp  test_qt_workflow_main.cpp
(+341 files in other folders)
