if(ENABLE_DESKTOP)
    add_subdirectory(rapid_android)
    add_subdirectory(rapid_headless)
    add_subdirectory(rapid_session_manager)
    add_subdirectory(restgpssource)
    add_subdirectory(rapid_shell)
    add_subdirectory(rapid_session_analyzer)
elseif(ENABLE_ANDROID)
    add_subdirectory(rapid_android)
else()
    add_subdirectory(rapid_headless)
endif()
